fixed speling errors

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -8,8 +8,8 @@ layout: page
   British Columbia (UBC) Library in Vancouver, British Columbia, where I work to
   support teaching, learning, and research with geospatial information,
   technology, and cartographic material. Previous to my work at UBC I was the
-  Reference and Geospatial Librarian at the Norman B. Levental Map Center at the
-  Boston Public Library (BPL). While there I led reference and technology
+  Reference and Geospatial Librarian at the Norman B. Leventhal Map Center at
+  the Boston Public Library (BPL). While there I led reference and technology
   projects within the BPL's collection of approximately 200,000 historical map
   and 5,000 atlases ranging in date from 1482 to the present. Altogether, I have
   over 14 years of professional experience working in a variety of map
@@ -22,8 +22,8 @@ layout: page
   relaxing. I sometimes post about those things on my personal site
   <a href="https://evan.town/" target="_blank">evan.town</a>. I've been to 49
   U.S. states, 7 Canadian provinces and territories, 14 countries, 3 continents,
-  and all 4 hemispheres. I've been keeping track of road trips routes since I
-  was a kid. Below are my updated routes in North America as of February, 2023.
+  and all 4 hemispheres. I've been keeping track of road trip routes since I was
+  a kid. Below are my updated routes in North America as of February, 2023.
 </p>
 
 <iframe
