--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -33,3 +33,18 @@ layout: page
   height="600"
   style="border: none; margin-top: 50px"
 ></iframe>
+
+<!-- Google tag (gtag.js) -->
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=G-3EP816DGVQ"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
+
+  gtag("config", "G-3EP816DGVQ");
+</script>
