updated portfolio language

--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,8 +4,8 @@ layout: page
 
 <h1 class="portfolio">Evan Thornberry</h1>
 <p>
-  I'm the Geographic Information Systems (GIS) Librarian at the University of
-  British Columbia (UBC) Library in Vancouver, British Columbia, where I work to
+  I'm the Head and Curator of the David Rumsey Map Center at Stanford University Library, where I oversee the stewardship of a significant historical map collection. Previously, I was the Geographic Information Systems (GIS) Librarian at the University of
+  British Columbia (UBC) Library in Vancouver, British Columbia, where I worked to
   support teaching, learning, and research with geospatial information,
   technology, and cartographic material. Previous to my work at UBC I was the
   Reference and Geospatial Librarian at the Norman B. Leventhal Map Center at
